--- a/about.html
+++ b/about.html
@@ -43,16 +43,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-white active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link text-white active fw-bold" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="about.html">About</a>
+              <a class="nav-link text-white fw-bold" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#portfolio">Portfolio</a>
+              <a class="nav-link text-white fw-bold" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="contact.html">contact</a>
+              <a class="nav-link text-white fw-bold" href="contact.html">contact</a>
             </li>
           </ul>
 
@@ -101,12 +101,11 @@
               extraordinary world of LuxPersia, where every masterpiece tells a story of cultural richness and timeless
               beauty.</p>
 
-            <!-- Read more button -->
-            <!-- Read more button -->
+            <!-- Read more button -->          
             <button class="btn btn-link d-block d-lg-none px-0 text-primary fw-bold" type="button"
               data-bs-toggle="collapse" data-bs-target="#essenceContent" aria-expanded="false"
               aria-controls="essenceContent">
-              Read more
+              <i class="bi bi-arrow-right-short "></i> Read more 
             </button>
 
 
@@ -149,8 +148,8 @@
               <img src="./images/sara.jpg" alt="a picture of Sara, the visionary owner" class="img-fluid rounded-3">
               <div class="px-4 text-center">
                 <p class="fw-bold fs-4 mb-0 mt-3">SARA</p>
-                <p class="fst-italic text-white">The Visionary Owner</p>
-                <p>Sara, the owner, ensures it's a sanctuary for Persian art lovers with a clear vision.</p>
+                <p class="fst-italic text-white fw-semibold">The Visionary Owner</p>
+                <p class="fw-semibold">Sara, the owner, ensures it's a sanctuary for Persian art lovers with a clear vision.</p>
               </div>
             </div>
           </div>
@@ -162,8 +161,8 @@
 
               <div class="px-4 text-center">
                 <p class="fw-bold fs-4 mb-0 mt-3">ANITA</p>
-                <p class="fst-italic text-white">The Curator of Artistic Excellence</p>
-                <p>Anita selects only the finest treasures, showcasing her discerning eye for Persian craftsmanship.</p>
+                <p class="fst-italic text-white fw-semibold">The Curator of Artistic Excellence</p>
+                <p class="fw-semibold">Anita selects only the finest treasures, showcasing her discerning eye for Persian craftsmanship.</p>
               </div>
             </div>
           </div>
@@ -175,8 +174,8 @@
 
               <div class="px-4 text-center">
                 <p class="fw-bold fs-4 mb-0 mt-3">Mingyang</p>
-                <p class="fst-italic text-white">The Dynamic Sales Manager</p>
-                <p>MZ builds lasting relationships, ensuring seamless and enriching interactions.</p>
+                <p class="fst-italic text-white fw-semibold">The Dynamic Sales Manager</p>
+                <p class="fw-semibold">MZ builds lasting relationships, ensuring seamless and enriching interactions.</p>
               </div>
             </div>
           </div>
@@ -187,8 +186,8 @@
   </main>
 
   <!-- footer section -->
-  <footer class="text-primary py-4 mt-5" style="background-color: #D9D9D9; font-size: smaller;">
-    <div class="container-xl">
+  <footer class="text-primary py-4 mt-5" style="background-color:#dcddde; font-size: smaller;">
+    <div>
       <!-- For small screens, each section will be in its own row -->
       <div class="row align-items-center">
         <!-- Logo section -->
@@ -201,7 +200,7 @@
         <!-- Copyright text section -->
         <div class="col-12 col-sm-4 text-center">
           <p><strong>&copy; All images belong to Sara Mohsenpour</strong><br><strong>OTTAWA — STUDIO:</strong> 1534
-            Baseline Road Ottawa, ON</p>
+            Baseline Road Ottawa, ON <a href="#top" role="link">Back to Top</a></p>
         </div>
 
         <!-- Social icons section -->
