--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-white active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link text-white active fw-bold" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="about.html">About</a>
+              <a class="nav-link text-white fw-bold" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#portfolio">Portfolio</a>
+              <a class="nav-link text-white fw-bold" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="contact.html">contact</a>
+              <a class="nav-link text-white fw-bold" href="contact.html">contact</a>
             </li>
           </ul>
 
@@ -235,7 +235,7 @@
     <section class="banner-more" id="home">
       <div class="container-xl">
         <div class="row ">
-          <div class="col-lg-6 col-md-6 bg-secondary text-white text-center pt-4 text-wrap fs-5 px-5"
+          <div class="col-lg-6 col-md-6 bg-secondary text-white text-center pt-4 text-wrap fs-5 px-5 ali"
             style="--bs-bg-opacity: .7; height: 50vh;">
             <h3 class="fw-bold">A Place To Be Artist</h3>
             <p>A Place To Be Artist our studio serves as a sanctuary where we gather to ideate and craft remarkable
@@ -262,7 +262,7 @@
         <!-- Copyright text section -->
         <div class="col-12 col-sm-4 text-center mt-3">
           <p><strong>&copy; All images belong to Sara Mohsenpour</strong><br><strong>OTTAWA — STUDIO:</strong> 1534
-            Baseline Road Ottawa, ON</p>
+            Baseline Road Ottawa, ON <a href="#top" role="link">Back to Top</a></p>
         </div>
 
         <!-- Social icons section -->
