optimize about page

--- a/about.html
+++ b/about.html
@@ -120,10 +120,13 @@
             </div>
           </div>
 
-          <!-- Picture -->
+          <!-- Picture -woman holding two birds-->
           <div class="col-sm-6 order-sm-first mb-3 justify-content-center">
             <div class="position-relative">
-              <img src="./images/contact-lg.jpg" alt="untitled artwork, a paint of a man-bird king"
+              <img
+                srcset="./images/contact-lg-derivatives/contact-lg-480_x_692.jpg, ./images/contact-lg-derivatives/contact-lg-960_x_1383.jpg 2x, ./images/contact-lg-derivatives/contact-lg-1440_x_2075.jpg 3x"
+                src="./images/contact-lg-derivatives/contact-lg-1440_x_2075.jpg"
+                alt="untitled artwork, a paint of a woman holding two birds under moon light"
                 class="img-fluid w-100">
               <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
                 style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));"></div>
@@ -145,7 +148,10 @@
           <!-- Sara -->
           <div class="col-12 col-sm-4 mb-3">
             <div class="position-relative">
-              <img src="./images/sara.jpg" alt="a picture of Sara, the visionary owner" class="img-fluid rounded-3">
+              <img
+                srcset="./images/sara-derivatives/sara-480_x_480.jpg, ./images/sara-derivatives/sara-960_x_960.jpg 2x, ./images/sara-derivatives/sara-1440_x_1440.jpg 3x"
+                src="./images/sara-derivatives/sara-1440_x_1440.jpg"
+                alt="a picture of Sara, the visionary owner" class="img-fluid rounded-3">
               <div class="px-4 text-center">
                 <p class="fw-bold fs-4 mb-0 mt-3">SARA</p>
                 <p class="fst-italic text-white fw-semibold">The Visionary Owner</p>
@@ -156,9 +162,11 @@
           <!-- ANITA -->
           <div class="col-12 col-sm-4 mb-3">
             <div class="position-relative">
-              <img src="./images/anita.jpg" alt="a picture of Anita, the curator of artistic excellence"
-                class="img-fluid rounded-3">
-
+              <img
+              srcset="./images/Anita-Final-derivatives/Anita-Final-480_x_480.jpg, ./images/Anita-Final-derivatives/Anita-Final-960_x_960.jpg 2x, ./images/Anita-Final-derivatives/Anita-Final-1440_x_1440.jpg 3x"
+              src="./images/Anita-Final-derivatives/Anita-Final-1440_x_1440.jpg"
+              alt="a picture of Anita, the curator of artistic excellence"
+              class="img-fluid rounded-3">
               <div class="px-4 text-center">
                 <p class="fw-bold fs-4 mb-0 mt-3">ANITA</p>
                 <p class="fst-italic text-white fw-semibold">The Curator of Artistic Excellence</p>
@@ -169,9 +177,11 @@
           <!-- Mingyang -->
           <div class="col-12 col-sm-4 mb-3">
             <div class="position-relative">
-              <img src="./images/mz.jpg" alt="untitles artwork of a man, the moon and two birds"
-                class="img-fluid rounded-3">
-
+              <img
+              srcset="./images/MZ-derivatives/MZ-480_x_480.jpg, ./images/MZ-derivatives/MZ-960_x_960.jpg 2x, ./images/MZ-derivatives/MZ-1440_x_1440.jpg 3x"
+              src="./images/MZ-derivatives/MZ-1440_x_1440.jpg"
+              alt="a picture of MZ, the dynamic sales manager"
+              class="img-fluid rounded-3">
               <div class="px-4 text-center">
                 <p class="fw-bold fs-4 mb-0 mt-3">Mingyang</p>
                 <p class="fst-italic text-white fw-semibold">The Dynamic Sales Manager</p>
