--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
   <!-- navigation -->
-  <header class="">
+  <header>
     <!-- <nav class="navbar navbar-expand-lg bg-dark bg-body-tertiary"> -->
     <!-- <nav class="navbar navbar-expand-lg" style="background-color: #73B19C; rounded-3; --bs-bg-opacity: .7;"> -->
     <!-- <nav class="navbar navbar-expand-lg bg-body-primary"> -->
@@ -90,7 +90,7 @@
       <div class="container-xl bg-secondary text-white text-center py-4 text-wrap fs-5 px-5"
         style="--bs-bg-opacity: .7; width: 60%;">
         <h1 class="display-1">Friendly Faces,<br>Artistic Spaces</h1>
-        <p >The extraordinary world of LuxPersia, where every masterpiece tells a story of cultural richness and
+        <p>The extraordinary world of LuxPersia, where every masterpiece tells a story of cultural richness and
           timeless beauty!</p>
 
         <a class="btn btn-primary rounded-0 bg-dark border-0 px-3 py-2" href="about.html" role="button">Read More</a>
@@ -130,8 +130,11 @@
           <!-- Picture -->
           <div class="col-sm-6 order-sm-first mb-3 justify-content-center">
             <div class="position-relative">
-              <img src="./images/birdman.jpg" alt="untitled artwork, a paint of a man-bird king"
-                class="img-fluid w-100">
+              <img
+                srcset="./images/birdman-derivatives/birdman-720_x_434.jpg, ./images/birdman-derivatives/birdman-1440_x_869.jpg 2x, ./images/birdman-derivatives/birdman-2160_x_1304.jpg 3x"
+                src="./images/birdman-derivatives/birdman-2160_x_1304.jpg"
+                alt="untitled artwork, a paint of a man-bird king" class="img-fluid w-100">
+
               <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
                 style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
               </div>
@@ -154,7 +157,10 @@
           <!-- the man, the moon and 2 birds -->
           <div class="col-12 col-sm-4 mb-3">
             <div class="position-relative">
-              <img src="./images/square-moon.jpg" alt="untitles artwork of a man, the moon and two birds"
+              <img
+              srcset="./images/square-moon-derivatives/square-moon-480_x_495.jpg, ./images/square-moon-derivatives/square-moon-960_x_990.jpg 2x, ./images/square-moon-derivatives/square-moon-1440_x_1485.jpg 3x"
+              src="./images/square-moon-derivatives/square-moon-1440_x_1485.jpg"
+              alt="untitles artwork of a man, the moon and two birds"
                 class="img-fluid w-100">
               <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
                 style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
@@ -168,7 +174,10 @@
           <!-- people artwork -->
           <div class="col-12 col-sm-4 mb-3">
             <div class="position-relative">
-              <img src="./images/square-people.jpg" alt="untitled artwork of the people sitting in a restaurant"
+              <img
+              srcset="./images/square-people-derivatives/square-people-480_x_495.jpg, ./images/square-people-derivatives/square-people-960_x_990.jpg 2x, ./images/square-people-derivatives//square-people-1440_x_1485.jpg 3x"
+              src="./images/square-people-derivatives//square-people-1440_x_1485.jpg"
+              alt="untitled artwork of the people sitting in a restaurant"
                 class="img-fluid w-100">
               <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
                 style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
@@ -182,7 +191,10 @@
           <!-- the man artwork -->
           <div class="col-12 col-sm-4 mb-4">
             <div class="position-relative">
-              <img src="./images/square-man.jpg" alt="untitled artwork of a man's face and moon in background artwork"
+              <img
+                srcset="./images/square-man-derivatives/square-man-480_x_495.jpg, ./images/square-man-derivatives/square-man-960_x_990.jpg 2x, ./images/square-man-derivatives/square-man-1440_x_1485.jpg 3x"
+                src="./images/square-man-derivatives/square-man-1440_x_1485.jpg"
+                alt="untitled artwork of a man's face and moon in background artwork"
                 class="img-fluid w-100">
               <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
                 style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
@@ -215,7 +227,10 @@
           <!-- Picture -->
           <div class="col-sm-6 mb-3 justify-content-center">
             <div class="position-relative">
-              <img src="./images/chat.jpg" alt="the man, the moon and two birds artwork" class="img-fluid w-100">
+              <img
+                srcset="./images/chat-derivatives/chat-720_x_550.jpg, ./images/chat-derivatives/chat-1440_x_1100.jpg 2x, ./images/chat-derivatives/chat-2160_x_1650.jpg 3x"
+                src="./images/chat-derivatives/chat-2160_x_1650.jpg"
+                alt="The Jewish Fortune Teller artwork, artist was Kamal-ol-Molk" class="img-fluid w-100">
               <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
                 style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
               </div>
@@ -240,7 +255,8 @@
             <h3 class="fw-bold">A Place To Be Artist</h3>
             <p>A Place To Be Artist our studio serves as a sanctuary where we gather to ideate and craft remarkable
               creations!</p>
-            <a class="btn btn-primary rounded-0 bg-dark border-0 px-3 py-2" href="about.html" role="button">More About Us</a>
+            <a class="btn btn-primary rounded-0 bg-dark border-0 px-3 py-2" href="about.html" role="button">More About
+              Us</a>
           </div>
         </div>
       </div>
