--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <body>
   <!-- navigation -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top" role="navigation">
       <!-- full width=xl or md, provide the size -->
       <div class="container-md">
         <!-- add logo -->
@@ -73,7 +73,7 @@
   </header>
 
 
-  <main>
+  <main role="main">
     <!-- Hero-banner section -->
     <section class="banner-about d-flex align-items-center justify-content-center" id="home">
       <div class="container-xl bg-secondary text-white text-center py-4 text-wrap fs-5 px-5"
@@ -196,7 +196,7 @@
   </main>
 
   <!-- footer section -->
-  <footer class="text-primary py-4 mt-5" style="background-color:#dcddde; font-size: smaller;">
+  <footer class="text-primary py-4 mt-5" style="background-color:#dcddde; font-size: smaller;" role="contentinfo">
     <div>
       <!-- For small screens, each section will be in its own row -->
       <div class="row align-items-center">
@@ -210,7 +210,7 @@
         <!-- Copyright text section -->
         <div class="col-12 col-sm-4 text-center">
           <p><strong>&copy; All images belong to Sara Mohsenpour</strong><br><strong>OTTAWA — STUDIO:</strong> 1534
-            Baseline Road Ottawa, ON <a href="#top" role="link">Back to Top</a></p>
+            Baseline Road Ottawa, ON <a href="#top" role="link" aria-label="Back to Top">Back to Top</a></p>
         </div>
 
         <!-- Social icons section -->
