--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 <body>
     <!-- navigation -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top" role="navigation">
             <!-- full width=xl or md, provide the size -->
             <div class="container-md">
                 <!-- add logo -->
@@ -67,12 +67,10 @@
                 </div>
             </div>
         </nav>
-
-
     </header>
 
 
-    <main>
+    <main role="main">
         <!-- Hero-banner section -->
         <section class="banner-contact d-flex align-items-center justify-content-center" id="home">
             <div class="container-xl bg-secondary text-white text-center py-4 text-wrap fs-5 px-5"
@@ -132,7 +130,7 @@
 
 
     <!-- footer section -->
-    <footer class=" container-xltext-primary py-4 mt-0" style="background-color: #D9D9D9; font-size: smaller;">
+    <footer class=" container-xltext-primary py-4 mt-0" style="background-color: #D9D9D9; font-size: smaller;" role="contentinfo">
         <div class="">
             <!-- For small screens, each section will be in its own row -->
             <div class="row align-items-center">
@@ -146,7 +144,7 @@
                 <!-- Copyright text section -->
                 <div class="col-12 col-sm-4 text-center">
                     <p><strong>&copy; All images belong to Sara Mohsenpour</strong><br><strong>OTTAWA — STUDIO:</strong>
-                        1534 Baseline Road Ottawa, ON <a href="#top" role="link">Back to Top</a></p>
+                        1534 Baseline Road Ottawa, ON <a href="#top" role="link" aria-label="Back to Top">Back to Top</a></p>
                 </div>
 
                 <!-- Social icons section -->
