--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- <nav class="navbar navbar-expand-lg bg-dark bg-body-tertiary"> -->
     <!-- <nav class="navbar navbar-expand-lg" style="background-color: #73B19C; rounded-3; --bs-bg-opacity: .7;"> -->
     <!-- <nav class="navbar navbar-expand-lg bg-body-primary"> -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top" role="navigation">
       <!-- full width=xl or md, provide the size -->
       <div class="container-md">
         <!-- add logo -->
@@ -75,7 +75,7 @@
 
   </header>
 
-  <main>
+  <main role="main">
     <!-- Hero section -->
     <!-- <section class="hero-section">
           <div class="container d-flex align-items-center justify-content-center fs-1 text-white flex-column">
@@ -264,7 +264,7 @@
   </main>
 
   <!-- footer section -->
-  <footer class="text-primary mt-5" style="background-color: #D9D9D9; font-size: smaller;">
+  <footer class="text-primary mt-5" style="background-color: #D9D9D9; font-size: smaller;" role="contentinfo">
     <div>
       <!-- For small screens, each section will be in its own row -->
       <div class="row align-items-center">
@@ -278,7 +278,7 @@
         <!-- Copyright text section -->
         <div class="col-12 col-sm-4 text-center mt-3">
           <p><strong>&copy; All images belong to Sara Mohsenpour</strong><br><strong>OTTAWA — STUDIO:</strong> 1534
-            Baseline Road Ottawa, ON <a href="#top" role="link">Back to Top</a></p>
+            Baseline Road Ottawa, ON <a href="#top" role="link" aria-label="Back to Top">Back to Top</a></p>
         </div>
 
         <!-- Social icons section -->
