--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  
+  <!-- add library animate -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
   <title>Portgolio - Sara Mohsenpour</title>
 
   <!-- boostrap CSS -->
@@ -89,7 +97,7 @@
     <section class="banner d-flex align-items-center justify-content-center" id="home">
       <div class="container-xl bg-secondary text-white text-center py-4 text-wrap fs-5 px-5"
         style="--bs-bg-opacity: .7; width: 60%;">
-        <h1 class="display-1">Friendly Faces,<br>Artistic Spaces</h1>
+        <h1 class="display-1 my-element animate__animated animate__bounce">Friendly Faces,<br>Artistic Spaces</h1>
         <p>The extraordinary world of LuxPersia, where every masterpiece tells a story of cultural richness and
           timeless beauty!</p>
 
