--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    
+  <!-- add library animate -->
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+
     <title>Portgolio - Sara Mohsenpour</title>
 
     <!-- boostrap CSS -->
@@ -75,7 +83,7 @@
         <section class="banner-contact d-flex align-items-center justify-content-center" id="home">
             <div class="container-xl bg-secondary text-white text-center py-4 text-wrap fs-5 px-5"
                 style="--bs-bg-opacity: .7; width: 60%;">
-                <h1 class="display-1">Inviting Home,<br>Engaging Space</h1>
+                <h1 class="display-1 my-element animate__animated animate__bounce">Inviting Home,<br>Engaging Space</h1>
                 <p>Let's Begin with a Conversation, Over Coffee Perhaps?</p>
                 <a class="btn btn-primary rounded-0 bg-dark border-0 px-3 " href="index.html" role="button">Our
                     Portfolio</a>
